--- a/blackjack-game/index.html
+++ b/blackjack-game/index.html
@@ -30,6 +30,15 @@
                 <button id="deal-button">Deal</button>
                 <button id="hit-button" disabled>Hit</button>
                 <button id="stand-button" disabled>Stand</button>
+                <div class="player-count-control">
+                    <label for="computer-players">Computer Players:</label>
+                    <select id="computer-players">
+                        <option value="1">1</option>
+                        <option value="2" selected>2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                    </select>
+                </div>
             </div>
             
             <div class="stats">
