--- a/blackjack-game/index.html
+++ b/blackjack-game/index.html
@@ -30,6 +30,7 @@
                 <button id="deal-button">Deal</button>
                 <button id="hit-button" disabled>Hit</button>
                 <button id="stand-button" disabled>Stand</button>
+                <button id="sound-button">🔊 Sound On</button>
                 <div class="player-count-control">
                     <label for="computer-players">Computer Players:</label>
                     <select id="computer-players">
@@ -54,6 +55,10 @@
                     <span>Draws:</span>
                     <span id="draws">0</span>
                 </div>
+            </div>
+            
+            <div class="sound-test-link">
+                <a href="sound-test.html">Sound Test</a>
             </div>
         </div>
     </div>
