Initial commit of reset button

--- a/blackjack-game/index.html
+++ b/blackjack-game/index.html
@@ -28,6 +28,7 @@
             
             <div class="controls">
                 <button id="deal-button">Deal</button>
+                <button id="reset-button">Reset Scores</button>
                 <button id="hit-button" disabled>Hit</button>
                 <button id="stand-button" disabled>Stand</button>
                 <button id="sound-button">🔊 Sound On</button>
